// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas sobre Gif Grid Debe mostrarse correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    One Punch
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Pruebas sobre Gif Grid Debe mostrat items cuando se cargan imagenes en useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    One Punch
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Algo"
      url="http://localhost/algo/algo"
    />
    <GifGridItem
      id="ABC1"
      key="ABC1"
      title="Algo"
      url="http://localhost/algo/algo"
    />
  </div>
</Fragment>
`;
